# vim-markdownizer

./: .gitmodules  .tmuxp.yaml  Cargo.toml  Makefile  Readme.md  flake.nix  install.sh  shell.nix
after/: markdown.vim
docs/: Backlog.md  Dev-installation.md  architecture.md  backlog.md  format.md  index.md  specs.md
ftplugin/: markdown.vim
plugin/: dashboard.vim  vim-markdownizer-clock.vim  vim-markdownizer.vim
vim-markdownizer/: Cargo.toml
vim-markdownizer/src/: eventhandler.rs  main.rs  messages.rs
