[package]
name = "vim-markdownizer"
version = "0.1.0"
authors = ["Henri Bourcereau <henri@bourcereau.fr>"]
edition = "2018"

[[bin]]
name = "vim-markdownizer"
path = "src/main.rs"

[dependencies]
# neovim-lib = "0.6.1" # version inconsistent the git one..
neovim-lib = { git = "https://github.com/daa84/neovim-lib" }

[dependencies.markdownizer]
path = "../markdownizer"
