[package]
name = "vim-markdownizer"
version = "0.2.0"
authors = ["Henri Bourcereau <henri@bourcereau.fr>"]
edition = "2018"

[[bin]]
name = "vim-markdownizer"
path = "src/main.rs"

[dependencies]
pathdiff = "0.1.0"
nvim-rs = { git = "https://github.com/KillTheMule/nvim-rs", features = [ "use_tokio" ] }

# rmp = "0.8.9"
rmpv = "0.4.3"
# log = "0.4.8"
async-trait = "0.1.22"
# futures = { version = "0.3.1", features = ["io-compat"] }
tokio = { version = "0.2.8", features = ["sync", "rt-core", "macros", "io-util", "tcp", "uds", "process", "io-std", "dns", "rt-threaded", "io-driver", "fs"] }
futures = "0.3.12"
# pin-project = { version = "0.4.6", optional = true }
# async-std = { version = "1.4.0", features = ["attributes"], optional = true }

[dependencies.markdownizer]
path = "../markdownizer"
